# player

./: .gitignore  hxqy.jks
app/: build.gradle
app/src/androidTest/java/com/sinochem/player/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  AudioPushChannel.cpp  AudioPushChannel.h  BaseChannel.h  CMakeLists.txt  JavaCallHelper.cpp  JavaCallHelper.h  JdFFmpeg.cpp  JdFFmpeg.h  VideoChannel.cpp  VideoChannel.h  VideoPushChannel.cpp  VideoPushChannel.h  macro.h  native-lib.cpp  safe_queue.h
app/src/main/cpp/include/libavutil/: ffversion.h
app/src/main/cpp/librtmp/: CMakeLists.txt  rtmp.c
app/src/main/java/com/sinochem/player/: JdPlayer.java  MainActivity.java  PlayActivity.java  PushActivity.java  TvListActivity.java
app/src/main/java/com/sinochem/player/data/: Constant.java  TvItemBean.java
app/src/main/java/com/sinochem/player/live/: LivePusher.java
app/src/main/java/com/sinochem/player/live/channel/: AudioChannel.java  CameraHelper.java  VideoChannel.java
app/src/main/res/layout/: activity_main.xml  activity_play.xml  activity_push.xml  activity_tv_list.xml  item_tv_layout.xml
app/src/test/java/com/sinochem/player/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
